--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -64,9 +64,9 @@
 
     <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TweenMax.min.js"></script>
     <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollToPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr.custom.min.js"></script>
+    <!--<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr.custom.min.js"></script>-->
 
-    <!-- <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
     <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/iscroll-probe.js"></script>
     <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollMagic.min.js"></script>
