--- a/_includes/themes/bootstrap/index.html
+++ b/_includes/themes/bootstrap/index.html
@@ -1,4 +1,4 @@
-{% include themes/bootstrap/nav-bar.html %}
+<!--{% include themes/bootstrap/nav-bar.html %}
 <div class="page-header container">
   <div class="row">
     <div class="col-lg-12">
@@ -7,7 +7,7 @@
       <p class="lead">{{ page.tagline }}</p>{% endif %}
     </div>
   </div>
-</div>
+</div>-->
 
     {{ content }}
 
