--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -8,8 +8,8 @@
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/bootstrap/component.min.css" />
-    <!--<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/bootstrap/carousel.css" />-->
+    <!--<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/bootstrap/component.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/bootstrap/carousel.css" />-->
 
     <!-- SCROLMAGIC CSS -->
     <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/normalize.css" />
