--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -47,37 +47,24 @@
     <script id="dsq-count-scr" src="//{{ site.JB.comments.disqus.short_name }}.disqus.com/count.js" async></script>
     {% endif %}
 
-    <!--<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-2.2.0.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/bootstrap/bootstrap.min.js"></script>
+    <!--<script src="{{ BASE_PATH }}/assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="{{ BASE_PATH }}/assets/js/custom/npm.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/custom/custom.js"></script>
-
-
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TweenMax.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollToPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr.custom.min.js"></script>
-
-
-
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/iscroll-probe.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollMagic.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/animation.gsap.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/debug.addIndicators.min.js"></script>-->
+    <script src="{{ BASE_PATH }}/assets/js/custom/custom.js"></script>-->
 
 
     <script src="{{ BASE_PATH }}/assets/js/jquery/jquery-2.2.0.min.js"></script>
 
-    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/jquery/query-1.11.2.min.js"><\/script>')</script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/TextPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TweenMax.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TextPlugin.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/imagesloaded.pkgd.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/plugins/ScrollToPlugin.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollMagic.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/animation.gsap.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollToPlugin.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/debug.addIndicators.min.js"></script>
 
     <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/demo5.js"></script>
     {% if page.js %}<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/{{ page.js }}"></script>{% endif %}
