--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -53,9 +53,9 @@
     <script src="{{ BASE_PATH }}/assets/js/custom/custom.js"></script>-->
 
 
-    <script src="{{ BASE_PATH }}/assets/js/jquery/jquery-2.2.0.min.js"></script>
+    <!--<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-2.2.0.min.js"></script>-->
     <script src="{{ BASE_PATH }}/assets/js/jquery/jquery.min.js"></script>
-    <!--<script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-1.11.2.min.js"><\/script>')</script>-->
+    <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-1.11.2.min.js"><\/script>')</script>
 
     <!-- <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
