--- a/assets/css/scrollmaniac/styles5.css
+++ b/assets/css/scrollmaniac/styles5.css
@@ -660,3 +660,20 @@ p {
     widows: 3; }
   h2, h3 {
     page-break-after: avoid; } }
+
+
+
+
+
+
+
+    #pinContainer {
+  		width: 100%;
+  		height: 100%;
+  		overflow: hidden;
+  	}
+  	.panel {
+  		height: 100%;
+  		width: 100%;
+  		position: absolute;
+  	}
