--- a/_includes/themes/bootstrap/default2.html
+++ b/_includes/themes/bootstrap/default2.html
@@ -13,9 +13,10 @@
 
     <!-- SCROLMAGIC CSS -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,100|Roboto+Condensed:700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/petition/styles.min.css?v=2" />
-
-
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/normalize.css" />
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/style.css" />
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/demo.css" />-->
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/{{ page.css }}">{% endif %}
 
 
@@ -47,10 +48,28 @@
     <script id="dsq-count-scr" src="//{{ site.JB.comments.disqus.short_name }}.disqus.com/count.js" async></script>
     {% endif %}
 
+    <!--<script src="{{ BASE_PATH }}/assets/js/bootstrap/bootstrap.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/custom/npm.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/custom/custom.js"></script>-->
 
-    <script src="{{ BASE_PATH }}/assets/js/petition/plugins.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/petition/app.min.js"></script>
 
+    <!--<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-2.2.0.min.js"></script>-->
+    <script src="{{ BASE_PATH }}/assets/js/jquery/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/jquery/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <!-- <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/jquery/query-1.11.2.min.js"><\/script>')</script>-->
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TweenMax.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/TextPlugin.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/imagesloaded.pkgd.min.js"></script>
+
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollMagic.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/animation.gsap.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/ScrollToPlugin.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/debug.addIndicators.min.js"></script>
+
+    <script src="{{ BASE_PATH }}/assets/js/scrollmaniac/demo5-test.js"></script>
     {% if page.js %}<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/{{ page.js }}"></script>{% endif %}
   </body>
 </html>
