--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -8,7 +8,7 @@
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/petition/styles.min.css?v=2" />
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/petition/styles.css?v=2" />
 
 
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/{{ page.css }}">{% endif %}
@@ -43,8 +43,8 @@
     {% endif %}
 
 
-    <script src="{{ BASE_PATH }}/assets/js/petition/plugins.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/petition/app.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/petition/plugins.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/petition/app.js"></script>
 
     {% if page.js %}<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/{{ page.js }}"></script>{% endif %}
   </body>
