--- a/_includes/themes/bootstrap/petition-default.html
+++ b/_includes/themes/bootstrap/petition-default.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,9 +8,7 @@
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/main.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/modernizr-2.6.2-respond-1.1.0.min.js" />
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/petition/styles.css?v=2" />
 
 
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/{{ page.css }}">{% endif %}
@@ -48,15 +42,9 @@
     <script id="dsq-count-scr" src="//{{ site.JB.comments.disqus.short_name }}.disqus.com/count.js" async></script>
     {% endif %}
 
-    <script src="{{ BASE_PATH }}/assets/js/skills/jquery.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/enquire.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/TweenMax.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/TextPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/ScrollToPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/ScrollMagic.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/debug.addIndicators.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/animation.gsap.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/main.min.js"></script>
+
+    <script src="{{ BASE_PATH }}/assets/js/petition/plugins.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/petition/app.js"></script>
 
     {% if page.js %}<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/{{ page.js }}"></script>{% endif %}
   </body>
