--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -14,7 +14,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/normalize.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/main.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/modernizr-2.6.2-respond-1.1.0.min.js" />
+
+    <script src="{{ BASE_PATH }}/assets/js/skills/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
 
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/{{ page.css }}">{% endif %}
