--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -50,6 +50,9 @@
     {% endif %}
 
     <script src="{{ BASE_PATH }}/assets/js/skills/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/skills/jquery.min.js"><\/script>')</script>
+
+
     <script src="{{ BASE_PATH }}/assets/js/skills/enquire.min.js"></script>
     <script src="{{ BASE_PATH }}/assets/js/skills/TweenMax.min.js"></script>
     <script src="{{ BASE_PATH }}/assets/js/skills/TextPlugin.min.js"></script>
