--- a/assets/css/parallax/styles.css
+++ b/assets/css/parallax/styles.css
@@ -684,7 +684,7 @@ p {
       text-align: center;
       width: 100%;
       margin: 0; }
-    .slide#slide01 .wrapper, .slide#slide02 .wrapper, .slide#slide04 .wrapper, .slide#slide05 .wrapper, .slide#slide06 .wrapper, .slide#slide07 .wrapper, .slide#slide08 .wrapper, .slide#slide09 .wrapper, .slide#slide010 .wrapper, .slide#slide011 .wrapper, .slide#slide012 .wrapper, .slide#slide013 .wrapper, .slide#slide014 .wrapper, .slide#slide015 .wrapper, .slide#slide016 .wrapper, .slide#slide017 .wrapper, .slide#slide018 .wrapper, .slide#slide019 .wrapper {
+    .slide#slide01 .wrapper, .slide#slide02 .wrapper, .slide#slide04 .wrapper, .slide#slide05 .wrapper, .slide#slide06 .wrapper, .slide#slide07 .wrapper, .slide#slide08 .wrapper, .slide#slide09 .wrapper, .slide#slide010 .wrapper, .slide#slide011 .wrapper, .slide#slide012 .wrapper, .slide#slide013 .wrapper, .slide#slide014 .wrapper, .slide#slide015 .wrapper, .slide#slide016 .wrapper, .slide#slide017 .wrapper, .slide#slide018 .wrapper, .slide#slide019 .wrapper, .slide#slide020 .wrapper {
       top: 39%;
       text-align: center;
 	  }
