--- a/_includes/themes/bootstrap/parallax.html
+++ b/_includes/themes/bootstrap/parallax.html
@@ -12,10 +12,10 @@
     <meta name="author" content="{{ site.author.name }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/normalize.min.css" />
-    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/skills/main.min.css" />
 
-    <script src="{{ BASE_PATH }}/assets/js/skills/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/parallax/styles.css" />
+
+    <script src="{{ BASE_PATH }}/assets/js/parallax/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
 
     {% if page.css %}<link rel="stylesheet" type="text/css" href="{{ BASE_PATH }}/assets/css/scrollmaniac/{{ page.css }}">{% endif %}
@@ -49,18 +49,16 @@
     <script id="dsq-count-scr" src="//{{ site.JB.comments.disqus.short_name }}.disqus.com/count.js" async></script>
     {% endif %}
 
-    <script src="{{ BASE_PATH }}/assets/js/skills/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ BASE_PATH }}/assets/js/skills/jquery.min.js"><\/script>')</script>
 
 
-    <script src="{{ BASE_PATH }}/assets/js/skills/enquire.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/TweenMax.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/TextPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/ScrollToPlugin.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/ScrollMagic.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/debug.addIndicators.min.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/animation.gsap.js"></script>
-    <script src="{{ BASE_PATH }}/assets/js/skills/main.min.js"></script>
+
+
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+            <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+    <script src="{{ BASE_PATH }}/assets/js/parallax/main.js"></script>
 
     {% if page.js %}<script src="{{ BASE_PATH }}/assets/js/scrollmaniac/{{ page.js }}"></script>{% endif %}
   </body>
